# docs/OpenAPI.json
@@ -209,8 +209,7 @@
       "ClassifierWithRolesRequest": {
         "type": "object",
         "required": [
-          "classifier",
-          "originService"
+          "classifier"
         ],
         "properties": {
           "classifier": {
@@ -473,8 +472,7 @@
         "type": "object",
         "required": [
           "classifier",
-          "type",
-          "originService"
+          "type"
         ],
         "description": "V3 Request model for adding database to DBaaS",
         "properties": {
@@ -2857,6 +2855,14 @@
             "description": "Default physical databases for each registered type."
           }
         }
+      }
+    },
+    "securitySchemes": {
+      "SecurityScheme": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT",
+        "description": "Authentication"
       }
     }
   },
